# lfp-residential-fleet

./: .gitignore  PROJECT_SUMMARY.md  README.md  bootstrap_data.py  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: Fleet_Overview.py
app/_components/: __init__.py  alerts.py  analytics.py  charts.py  data.py  data_access.py  kpis.py  theme.py
app/pages/: 1_System.py  2_Degradation.py  3_SOHc.py
docs/: data_flow.html  make_observability_figure.py
src/bess_fleet/: __init__.py  db.py  io.py  recommendations.py
src/bess_fleet/pipeline/: __init__.py  build_daily_kpis.py  capacity_estimation.py  clean_temperatures.py  degradation_modes.py  derive_features.py  derive_soc.py  detect_threshold_events.py  lfp_to_1min_parquet.py  load_identity.py  raw_to_1min_parquet.py
tests/: conftest.py  test_app_pages.py  test_capacity_estimation.py  test_daily_kpis.py  test_degradation_modes.py  test_derive_soc.py  test_io.py  test_recommendations.py  test_threshold_events.py
