[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bess-fleet-health"
version = "0.2.0"
description = "Raw-to-parquet conversion + DuckDB layer for the Figgener residential BESS fleet."
requires-python = ">=3.11"
authors = [{ name = "Ashish Pandey" }]
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "duckdb>=1.0",
    "openpyxl>=3.1",   # for reading the Figgener metadata XLSX
    "streamlit>=1.35", # dashboard UI
    "plotly>=5.20",    # dashboard charts
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bess_fleet*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false
ignore_missing_imports = true
packages = ["bess_fleet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]
